--- a/ml-splatoon/conf/base/catalog.yml
+++ b/ml-splatoon/conf/base/catalog.yml
@@ -3,3 +3,18 @@
 # Documentation for this file format can be found in "The Data Catalog"
 # Link: https://kedro.readthedocs.io/en/stable/05_data/01_data_catalog.html
 
+stagedata:
+  type: pandas.CSVDataSet
+  filepath: data/01_raw/stagedata.csv
+
+weapon:
+  type: pandas.CSVDataSet
+  filepath: data/01_raw/weapon.csv
+
+train:
+  type: pandas.CSVDataSet
+  filepath: data/01_raw/train_data.csv
+
+test:
+  type: pandas.CSVDataSet
+  filepath: data/01_raw/test_data.csv
